--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -16,9 +16,9 @@ decorations = "Full"
 decorations_theme_variant = "Dark"
 
 [font]
-normal.family = "Source Code Pro"
-bold.family = "Source Code Pro"
-italic.family = "Source Code Pro"
-bold_italic.family = "Source Code Pro"
+normal.family = "SauceCodePro Nerd Font"
+bold.family = "SauceCodePro Nerd Font"
+italic.family = "SauceCodePro Nerd Font"
+bold_italic.family = "SauceCodePro Nerd Font"
 
-size = 11
+size = 11.25
