Changed Linux distro icons

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -91,35 +91,27 @@ Arch = " "
 Artix = " "
 CentOS = " "
 Debian = " "
-DragonFly = " "
-Emscripten = " "
-EndeavourOS = " "
+EndeavourOS = " "
 Fedora = " "
 FreeBSD = " "
-Garuda = "󰛓 "
+Garuda = " "
 Gentoo = " "
-HardenedBSD = "󰞌 "
-Illumos = "󰈸 "
+Illumos = " "
 Kali = " "
 Linux = " "
-Mabox = " "
 Macos = " "
 Manjaro = " "
-Mariner = " "
-MidnightBSD = " "
 Mint = " "
 NetBSD = " "
 NixOS = " "
 OpenBSD = "󰈺 "
 openSUSE = " "
-OracleLinux = "󰌷 "
 Pop = " "
 Raspbian = " "
 Redhat = "󱄛 "
 RedHatEnterprise = "󱄛 "
 RockyLinux = " "
-Redox = "󰀘 "
-Solus = "󰠳 "
+Solus = " "
 SUSE = " "
 Ubuntu = " "
 Unknown = " "
